syntax = "proto3";
option java_package="site.ani4h.shared";
message GetUsersByIdsReq {
  repeated int32 ids = 1;
}


message PublicUserInfo {
  int32 id = 1;
  string first_name = 2;
  string last_name = 3;
  string user_name = 4;
  string system_role = 6;
}

service User {
  rpc GetUserById(GetUsersByIdsReq) returns( PublicUserInfo);
}